Seperated out the namespace types from the (assembly) reference types. Added basics of console demos.

--- a/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
+++ b/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormReturnListDemo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReturnListDemo.Designer.cs">
+      <DependentUpon>FormReturnListDemo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormBasicDemo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormReturnListDemo.resx">
+      <DependentUpon>FormReturnListDemo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormBasicDemo.resx">
       <DependentUpon>FormBasicDemo.cs</DependentUpon>
