--- a/ConsoleAppDemo/ConsoleAppDemo.csproj
+++ b/ConsoleAppDemo/ConsoleAppDemo.csproj
@@ -61,5 +61,6 @@
       <Name>CDS.RoslynPadScripting</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\SharedAssemblyInfo\SharedAssemblyInfo.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
