--- a/CDS.CSharpScripting/CDS.CSharpScripting.csproj
+++ b/CDS.CSharpScripting/CDS.CSharpScripting.csproj
@@ -85,9 +85,6 @@
     <Reference Include="RoslynPad.Roslyn.Windows, Version=3.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RoslynPad.Roslyn.Windows.3.6.0\lib\net48\RoslynPad.Roslyn.Windows.dll</HintPath>
     </Reference>
-    <Reference Include="ScintillaNET, Version=3.6.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\jacobslusser.ScintillaNET.3.6.3\lib\net40\ScintillaNET.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -166,11 +163,11 @@
     <Compile Include="CustomRoslynHost.cs" />
     <Compile Include="Defaults.cs" />
     <Compile Include="EasyScript.cs" />
-    <Compile Include="OutputWindow.cs">
+    <Compile Include="OutputPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="OutputWindow.designer.cs">
-      <DependentUpon>OutputWindow.cs</DependentUpon>
+    <Compile Include="OutputPanel.designer.cs">
+      <DependentUpon>OutputPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptCompiler.cs" />
@@ -181,8 +178,8 @@
     <EmbeddedResource Include="CodeEditor.resx">
       <DependentUpon>CodeEditor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OutputWindow.resx">
-      <DependentUpon>OutputWindow.cs</DependentUpon>
+    <EmbeddedResource Include="OutputPanel.resx">
+      <DependentUpon>OutputPanel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
