--- a/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
+++ b/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
@@ -47,11 +47,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonScriptUtils.cs" />
-    <Compile Include="FormCustomDemo.cs">
+    <Compile Include="FormNonDefaultTypesDemo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCustomDemo.Designer.cs">
-      <DependentUpon>FormCustomDemo.cs</DependentUpon>
+    <Compile Include="FormNonDefaultTypesDemo.Designer.cs">
+      <DependentUpon>FormNonDefaultTypesDemo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRunManyDemo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRunManyDemo.Designer.cs">
+      <DependentUpon>FormRunManyDemo.cs</DependentUpon>
     </Compile>
     <Compile Include="FormGlobalsDemo.cs">
       <SubType>Form</SubType>
@@ -79,8 +85,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormCustomDemo.resx">
-      <DependentUpon>FormCustomDemo.cs</DependentUpon>
+    <EmbeddedResource Include="FormNonDefaultTypesDemo.resx">
+      <DependentUpon>FormNonDefaultTypesDemo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRunManyDemo.resx">
+      <DependentUpon>FormRunManyDemo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormGlobalsDemo.resx">
       <DependentUpon>FormGlobalsDemo.cs</DependentUpon>
