--- a/ConsoleAppDemo/ConsoleAppDemo.csproj
+++ b/ConsoleAppDemo/ConsoleAppDemo.csproj
@@ -80,5 +80,6 @@
       <Name>CDS.CSharpScripting</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\SharedAssemblyInfo\SharedAssemblyInfo.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
