--- a/CDS.CSharpScripting/packages.config
+++ b/CDS.CSharpScripting/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.DiaSymReader" version="1.3.0" targetFramework="net48" />
+  <package id="NuGet.CommandLine" version="5.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="RoslynPad.Editor.Windows" version="1.2.0" targetFramework="net48" />
   <package id="RoslynPad.Roslyn" version="3.6.0" targetFramework="net48" />
   <package id="RoslynPad.Roslyn.Windows" version="3.6.0" targetFramework="net48" />
