--- a/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
+++ b/WindowsFormsAppDemo/WindowsFormsAppDemo.csproj
@@ -158,5 +158,6 @@
       <Name>CDS.CSharpScripting</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\SharedAssemblyInfo\SharedAssemblyInfo.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
