--- a/CDS.CSharpScripting/packages.config
+++ b/CDS.CSharpScripting/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AvalonEdit" version="6.0.1" targetFramework="net48" />
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net48" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.AnalyzerUtilities" version="3.0.0" targetFramework="net48" />
@@ -16,9 +16,6 @@
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.DiaSymReader" version="1.3.0" targetFramework="net48" />
   <package id="NuGet.CommandLine" version="5.7.0" targetFramework="net48" developmentDependency="true" />
-  <package id="RoslynPad.Editor.Windows" version="1.2.0" targetFramework="net48" />
-  <package id="RoslynPad.Roslyn" version="3.6.0" targetFramework="net48" />
-  <package id="RoslynPad.Roslyn.Windows" version="3.6.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.Composition" version="1.0.31" targetFramework="net48" />
@@ -29,8 +26,6 @@
   <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Reactive" version="4.3.1" targetFramework="net48" />
-  <package id="System.Reactive.Linq" version="4.3.1" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net48" />
