--- a/CDS.CSharpScripting/app.config
+++ b/CDS.CSharpScripting/app.config
@@ -26,6 +26,10 @@
         <assemblyIdentity name="ICSharpCode.AvalonEdit" publicKeyToken="9cc39be672370310" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.1.2.30" newVersion="6.1.2.30" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
